// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelectInput Component MultiSelectInput handles change 1`] = `
<div>
  <div
    class="field gds-select-container input-select-field"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-6-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-1l9db9l-control"
      >
        <div
          class=" css-9plg90-ValueContainer"
        >
          <div
            class=" css-14el2xx-placeholder"
            id="react-select-6-placeholder"
          >
            Select...
          </div>
          <div
            class=" css-6j8wv5-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-6-placeholder"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-6-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class=" css-1okebmr-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              icon="fal,chevron-down"
            />
          </div>
        </div>
      </div>
      <div>
        <input
          name="SELECT"
          type="hidden"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`MultiSelectInput Component MultiSelectInput handles change with empty value when clearable 1`] = `
<div>
  <div
    class="field gds-select-container input-select-field"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-7-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-1l9db9l-control"
      >
        <div
          class=" css-9plg90-ValueContainer"
        >
          <div
            class=" css-14el2xx-placeholder"
            id="react-select-7-placeholder"
          >
            Select...
          </div>
          <div
            class=" css-6j8wv5-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-7-placeholder"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-7-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class=" css-1okebmr-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              icon="fal,chevron-down"
            />
          </div>
        </div>
      </div>
      <div>
        <input
          name="SELECT"
          type="hidden"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`MultiSelectInput Component MultiSelectInput renders 1`] = `
<div>
  <div
    class="field gds-select-container input-select-field"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-2-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-1l9db9l-control"
      >
        <div
          class=" css-1xxnwvf-ValueContainer"
        >
          1 item selected
          <div
            class=" css-g5g4gj-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-2-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class=" css-1okebmr-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              icon="fal,chevron-down"
            />
          </div>
        </div>
      </div>
      <div>
        <input
          name="SELECT"
          type="hidden"
          value="OPTION1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`MultiSelectInput Component MultiSelectInput renders disabled 1`] = `
<div>
  <div
    class="field gds-select-container input-select-field-read-only"
  >
    <span
      class="gds-typography"
    >
      -
    </span>
  </div>
</div>
`;

exports[`MultiSelectInput Component MultiSelectInput renders highlight in readOnly 1`] = `
<div>
  <div
    class="field gds-select-container input-select-field-read-only field-highlighted"
  >
    <span
      class="gds-typography"
    >
      -
    </span>
  </div>
</div>
`;

exports[`MultiSelectInput Component MultiSelectInput renders in readOnly 1`] = `
<div>
  <div
    class="field gds-select-container input-select-field-read-only"
  >
    <span
      class="gds-typography"
    >
      option 2
    </span>
  </div>
</div>
`;

exports[`MultiSelectInput Component MultiSelectInput renders in readOnly with invalid value 1`] = `
<div>
  <div
    class="field gds-select-container input-select-field-read-only"
  >
    <span
      class="gds-typography"
    >
      -
    </span>
  </div>
</div>
`;

exports[`MultiSelectInput Component MultiSelectInput renders in readOnly without input value 1`] = `
<div>
  <div
    class="field gds-select-container input-select-field-read-only"
  >
    <span
      class="gds-typography"
    >
      -
    </span>
  </div>
</div>
`;

exports[`MultiSelectInput Component MultiSelectInput renders inError 1`] = `
<div>
  <div
    class="field gds-select-container input-select-field input-error"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-11-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-ocyqvw-control"
      >
        <div
          class=" css-9plg90-ValueContainer"
        >
          <div
            class=" css-14el2xx-placeholder"
            id="react-select-11-placeholder"
          >
            Select...
          </div>
          <div
            class=" css-6j8wv5-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-11-placeholder"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-11-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class=" css-1okebmr-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              icon="fal,chevron-down"
            />
          </div>
        </div>
      </div>
      <div>
        <input
          name="SELECT"
          type="hidden"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`MultiSelectInput Component MultiSelectInput renders with invalid input value 1`] = `
<div>
  <div
    class="field gds-select-container input-select-field"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-5-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-1l9db9l-control"
      >
        <div
          class=" css-9plg90-ValueContainer"
        >
          <div
            class=" css-14el2xx-placeholder"
            id="react-select-5-placeholder"
          >
            Select...
          </div>
          <div
            class=" css-6j8wv5-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-5-placeholder"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-5-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class=" css-1okebmr-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              icon="fal,chevron-down"
            />
          </div>
        </div>
      </div>
      <div>
        <input
          name="SELECT"
          type="hidden"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`MultiSelectInput Component MultiSelectInput renders with multiple input values 1`] = `
<div>
  <div
    class="field gds-select-container input-select-field"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-3-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-1l9db9l-control"
      >
        <div
          class=" css-1xxnwvf-ValueContainer"
        >
          2 items selected
          <div
            class=" css-g5g4gj-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-3-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class=" css-1okebmr-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              data-testid="DATA-TEST-ID-magnifier"
              icon="fal,chevron-down"
            />
          </div>
        </div>
      </div>
      <div>
        <input
          name="SELECT"
          type="hidden"
          value="OPTION1"
        />
        <input
          name="SELECT"
          type="hidden"
          value="OPTION2"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`MultiSelectInput Component MultiSelectInput renders with valid value and clearable 1`] = `
<div>
  <div
    class="field gds-select-container input-select-field"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-8-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-1l9db9l-control"
      >
        <div
          class=" css-1xxnwvf-ValueContainer"
        >
          1 item selected
          <div
            class=" css-g5g4gj-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-8-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              data-testid="DATA-TEST-ID-clear"
              icon="fal,xmark"
            />
          </div>
          <span
            class=" css-1okebmr-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              data-testid="DATA-TEST-ID-magnifier"
              icon="fal,chevron-down"
            />
          </div>
        </div>
      </div>
      <div>
        <input
          name="SELECT"
          type="hidden"
          value="OPTION1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`MultiSelectInput Component MultiSelectInput renders with valid value and clearable without data-test-id 1`] = `
<div>
  <div
    class="field gds-select-container input-select-field"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-9-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-1l9db9l-control"
      >
        <div
          class=" css-1xxnwvf-ValueContainer"
        >
          1 item selected
          <div
            class=" css-g5g4gj-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-9-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              icon="fal,xmark"
            />
          </div>
          <span
            class=" css-1okebmr-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              icon="fal,chevron-down"
            />
          </div>
        </div>
      </div>
      <div>
        <input
          name="SELECT"
          type="hidden"
          value="OPTION1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`MultiSelectInput Component MultiSelectInput renders without input value 1`] = `
<div>
  <div
    class="field gds-select-container input-select-field"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-4-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-1l9db9l-control"
      >
        <div
          class=" css-9plg90-ValueContainer"
        >
          <div
            class=" css-14el2xx-placeholder"
            id="react-select-4-placeholder"
          >
            Select...
          </div>
          <div
            class=" css-6j8wv5-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-4-placeholder"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-4-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class=" css-1okebmr-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              icon="fal,chevron-down"
            />
          </div>
        </div>
      </div>
      <div>
        <input
          name="SELECT"
          type="hidden"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`MultiSelectInput Component MultiSelectInput renders without portal 1`] = `
<div>
  <div
    class="field gds-select-container input-select-field"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-10-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-1l9db9l-control"
      >
        <div
          class=" css-9plg90-ValueContainer"
        >
          <div
            class=" css-14el2xx-placeholder"
            id="react-select-10-placeholder"
          >
            Select...
          </div>
          <div
            class=" css-6j8wv5-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-10-placeholder"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-10-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class=" css-1okebmr-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="dynamic-search-icon icon"
              icon="fal,chevron-down"
            />
          </div>
        </div>
      </div>
      <div>
        <input
          name="SELECT"
          type="hidden"
        />
      </div>
    </div>
  </div>
</div>
`;
